[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Fonts/Main_Theme.tres" type="Theme" id=1]
[ext_resource path="res://GUI/Score/ScoreGUI.gd" type="Script" id=2]
[ext_resource path="res://Entities/Players/Player Base/player_sprite.tres" type="Texture" id=3]

[node name="ScoreGUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GetReadyLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Get ready!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverContainer" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameOverLabel" type="Label" parent="GameOverContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/line_spacing = 0
text = "GAME OVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverButtons" type="HBoxContainer" parent="GameOverContainer"]
anchor_left = 0.15
anchor_top = 0.5
anchor_right = 0.85
anchor_bottom = 0.5
margin_top = 40.0
margin_bottom = 190.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="GameOverContainer/GameOverButtons"]
margin_right = 446.0
margin_bottom = 150.0
size_flags_horizontal = 3
text = "Main Menu"

[node name="Quit" type="Button" parent="GameOverContainer/GameOverButtons"]
margin_left = 450.0
margin_right = 896.0
margin_bottom = 150.0
size_flags_horizontal = 3
text = "Quit to Desktop"

[node name="GlobalStatsContainer" type="VBoxContainer" parent="."]
margin_right = 136.0
margin_bottom = 74.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreContainer" type="HBoxContainer" parent="GlobalStatsContainer"]
margin_right = 136.0
margin_bottom = 27.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreText" type="Label" parent="GlobalStatsContainer/ScoreContainer"]
margin_right = 111.0
margin_bottom = 27.0
text = "Score:"

[node name="ScoreNumber" type="Label" parent="GlobalStatsContainer/ScoreContainer"]
self_modulate = Color( 0.027451, 0.847059, 0, 1 )
margin_left = 115.0
margin_right = 136.0
margin_bottom = 27.0
text = "0"

[node name="WaveContainer" type="HBoxContainer" parent="GlobalStatsContainer"]
margin_top = 47.0
margin_right = 136.0
margin_bottom = 74.0
custom_constants/separation = 9

[node name="WaveText" type="Label" parent="GlobalStatsContainer/WaveContainer"]
margin_right = 105.0
margin_bottom = 27.0
text = "Wave:"

[node name="WaveNumber" type="Label" parent="GlobalStatsContainer/WaveContainer"]
self_modulate = Color( 0.027451, 0.847059, 0, 1 )
margin_left = 114.0
margin_right = 123.0
margin_bottom = 27.0
text = "1"

[node name="PlayerLivesContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1137.0
margin_bottom = 168.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerOneLivesContainer" type="HBoxContainer" parent="PlayerLivesContainer"]
margin_right = 1137.0
margin_bottom = 27.0
alignment = 2

[node name="PlayerIcon" type="TextureRect" parent="PlayerLivesContainer/PlayerOneLivesContainer"]
margin_left = 1074.0
margin_right = 1087.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 13, 0 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerXLabel" type="Label" parent="PlayerLivesContainer/PlayerOneLivesContainer"]
margin_left = 1091.0
margin_right = 1112.0
margin_bottom = 27.0
text = "x"

[node name="PlayerLives" type="Label" parent="PlayerLivesContainer/PlayerOneLivesContainer"]
self_modulate = Color( 0.027451, 0.847059, 0, 1 )
margin_left = 1116.0
margin_right = 1137.0
margin_bottom = 27.0
text = "6"

[node name="PlayeTwoLivesContainer" type="HBoxContainer" parent="PlayerLivesContainer"]
visible = false
margin_top = 47.0
margin_right = 1137.0
margin_bottom = 74.0
alignment = 2

[node name="PlayerIcon" type="TextureRect" parent="PlayerLivesContainer/PlayeTwoLivesContainer"]
self_modulate = Color( 0.0117647, 0.0745098, 1, 1 )
margin_left = 1074.0
margin_right = 1087.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 13, 0 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerXLabel" type="Label" parent="PlayerLivesContainer/PlayeTwoLivesContainer"]
margin_left = 1091.0
margin_right = 1112.0
margin_bottom = 27.0
text = "x"

[node name="PlayerLives" type="Label" parent="PlayerLivesContainer/PlayeTwoLivesContainer"]
margin_left = 1116.0
margin_right = 1137.0
margin_bottom = 27.0
text = "6"

[node name="PlayerThreeLivesContainer" type="HBoxContainer" parent="PlayerLivesContainer"]
visible = false
margin_top = 94.0
margin_right = 1137.0
margin_bottom = 121.0
alignment = 2

[node name="PlayerIcon" type="TextureRect" parent="PlayerLivesContainer/PlayerThreeLivesContainer"]
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 1074.0
margin_right = 1087.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 13, 0 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerXLabel" type="Label" parent="PlayerLivesContainer/PlayerThreeLivesContainer"]
margin_left = 1091.0
margin_right = 1112.0
margin_bottom = 27.0
text = "x"

[node name="PlayerLives" type="Label" parent="PlayerLivesContainer/PlayerThreeLivesContainer"]
margin_left = 1116.0
margin_right = 1137.0
margin_bottom = 27.0
text = "6"

[node name="PlayerFourLivesContainer" type="HBoxContainer" parent="PlayerLivesContainer"]
visible = false
margin_top = 141.0
margin_right = 1137.0
margin_bottom = 168.0
alignment = 2

[node name="PlayerIcon" type="TextureRect" parent="PlayerLivesContainer/PlayerFourLivesContainer"]
self_modulate = Color( 1, 0.329412, 0, 1 )
margin_left = 1074.0
margin_right = 1087.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 13, 0 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerXLabel" type="Label" parent="PlayerLivesContainer/PlayerFourLivesContainer"]
margin_left = 1091.0
margin_right = 1112.0
margin_bottom = 27.0
text = "x"

[node name="PlayerLives" type="Label" parent="PlayerLivesContainer/PlayerFourLivesContainer"]
margin_left = 1116.0
margin_right = 1137.0
margin_bottom = 27.0
text = "6"
[connection signal="pressed" from="GameOverContainer/GameOverButtons/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="GameOverContainer/GameOverButtons/Quit" to="." method="_on_Quit_pressed"]
